--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-<body>
+<head>
 
-<h1>My First Heading</h1>
+<title>My First Heading</h1>
+</head>
 
-<p>My first paragraph.</p>
+  <body>
+HELLO WORLD
 
 </body>
 </html>
