--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head>
+<body>
 
-<title>FIRST HTML
-</head>
-
-  <body>
-HELLO WORLD
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
 </body>
 </html>
